Fixing bug that Mixins could not be without Props/Assocs for the entitystore-sql Formatting